MDEV-6832: ER_LOCK_WAIT_TIMEOUT on SHOW STATUS

Synchronous read view should not be needed for
SHOW commands.